--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,8 @@
   <title>Document</title>
 </head>
 <body class="body">
+  <div class="cursor">
+    <img src="./image/hammer.png" alt="cursor">
+  </div>
 </body>
 </html>
