greate logic game

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
   <div class="cursor">
-    <img src="./image/hammer.png" alt="cursor">
+    <img class="img-cursor" src="./image/hammer.png" alt="cursor">
   </div>
 </body>
 </html>
